--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -430,7 +430,7 @@
         <li>
             <b>PrimerN\u00FAmeroFacturaAutorizada [Número]:</b>
             Valor inicial del rango de numeración otorgado por la DIAN.
-            El número que copiaste desde el portal de la DIAN con nombre <i>PrimerNúmeroFacturaAutorizada</i>.
+            El número que copiaste desde el portal de la DIAN con nombre <i>PrimerNúmeroFacturaAutorizada</i>. Ingrésalo sin comas ni puntos.
         </li>
 
         <li>
@@ -602,7 +602,8 @@
         Haz clic en <i>Partipantes > Asociar prefijos</i>. En <i>Proveedor - Software</i> selecciona
         la opción <i>[NombreDeTuEmpresa] - SimpleOps[NitDeTuEmpresa]</i>, en <i>Prefijo</i> selecciona la opción que contiene el prefijo, número
         de resolución y rango de numeración recién autorizado y haz clic en <i>Agregar</i>. Verifica que la fecha de expiración sea la misma que
-        ingresaste en <i>Empresa - Producción.json</i> > <i>FinAutorizaci\u00F3nFacturaci\u00F3n</i>.
+        ingresaste en <i>Empresa - Producción.json</i> > <i>FinAutorizaci\u00F3nFacturaci\u00F3n</i>. Si en la tabla hay un rango de numeración 
+        anterior que ya no usarás, elimínalo.
     </p>
     <img src="Imágenes/Instalación y Habilitación Facturación Electrónica/AsociaciónPrefijosPortalDIAN.png" />
 
@@ -617,7 +618,7 @@
     <p>
         Ejecuta <b>SimpleOps</b> y haz clic en el botón <i>Obtener Clave Tecnica</i>. Te aparecerá un mensaje con la clave técnica del ambiente de
         producción. Puedes copiar el texto del mensaje con <i>Ctrl + C</i> y pegarlo en el bloc de notas para más facilidad. Suspende la ejecución, abre
-        <i>Empresa - Producción.json</i> e ingresa el valor de la clave ténica en <i>ClaveT\u00E9cnicaAplicaci\u00F3n</i>. Guarda los cambios realizados,
+        <i>Empresa - Producción.json</i> e ingresa el valor de la clave técnica en <i>ClaveT\u00E9cnicaAplicaci\u00F3n</i>. Guarda los cambios realizados,
         cierra el archivo y nuevamente haz el procedimiento del parrafo anterior.
     </p>
 
