--- a/SimpleOps/Guías/IDs Municipios.html
+++ b/SimpleOps/Guías/IDs Municipios.html
@@ -48,18 +48,18 @@
             <td><h3>Nombre</h3></td>
             <td><h3>Departamento</h3></td>
         </tr>
-        <tr><td>1</td><td>Bogotá</td><td>Distrito Capital</td></tr>
+        <tr><td>1</td><td>Bogotá, D.C.</td><td>Bogotá</td></tr>
         <tr><td>2</td><td>Medellín</td><td>Antioquia</td></tr>
         <tr><td>3</td><td>Cali</td><td>Valle Del Cauca</td></tr>
         <tr><td>4</td><td>Barranquilla</td><td>Atlántico</td></tr>
-        <tr><td>5</td><td>Cartagena</td><td>Bolívar</td></tr>
+        <tr><td>5</td><td>Cartagena De Indias</td><td>Bolívar</td></tr>
         <tr><td>6</td><td>Apartadó</td><td>Antioquia</td></tr>
         <tr><td>7</td><td>Armenia</td><td>Quindío</td></tr>
         <tr><td>8</td><td>Barrancabermeja</td><td>Santander</td></tr>
         <tr><td>9</td><td>Bello</td><td>Antioquia</td></tr>
         <tr><td>10</td><td>Bucaramanga</td><td>Santander</td></tr>
         <tr><td>11</td><td>Buenaventura</td><td>Valle Del Cauca</td></tr>
-        <tr><td>12</td><td>Cúcuta</td><td>Norte De Santander</td></tr>
+        <tr><td>12</td><td>San José De Cúcuta</td><td>Norte De Santander</td></tr>
         <tr><td>13</td><td>Dosquebradas</td><td>Risaralda</td></tr>
         <tr><td>14</td><td>Envigado</td><td>Antioquia</td></tr>
         <tr><td>15</td><td>Floridablanca</td><td>Santander</td></tr>
@@ -79,7 +79,7 @@
         <tr><td>29</td><td>Soacha</td><td>Cundinamarca</td></tr>
         <tr><td>30</td><td>Soledad</td><td>Atlántico</td></tr>
         <tr><td>31</td><td>Tuluá</td><td>Valle Del Cauca</td></tr>
-        <tr><td>32</td><td>Tumaco</td><td>Nariño</td></tr>
+        <tr><td>32</td><td>San Andrés De Tumaco</td><td>Nariño</td></tr>
         <tr><td>33</td><td>Tunja</td><td>Boyacá</td></tr>
         <tr><td>34</td><td>Valledupar</td><td>Cesar</td></tr>
         <tr><td>35</td><td>Villavicencio</td><td>Meta</td></tr>
@@ -763,7 +763,7 @@
         <tr><td>713</td><td>Pradera</td><td>Valle Del Cauca</td></tr>
         <tr><td>714</td><td>Prado</td><td>Tolima</td></tr>
         <tr><td>715</td><td>Providencia</td><td>Nariño</td></tr>
-        <tr><td>716</td><td>Providencia</td><td>Archipiélago De San Andrés, Providencia Y Santa Catalina</td></tr>
+        <tr><td>716</td><td>Providencia</td><td>San Andrés y Providencia</td></tr>
         <tr><td>717</td><td>Pueblo Bello</td><td>Cesar</td></tr>
         <tr><td>718</td><td>Pueblo Nuevo</td><td>Córdoba</td></tr>
         <tr><td>719</td><td>Pueblo Rico</td><td>Risaralda</td></tr>
@@ -867,7 +867,7 @@
         <tr><td>817</td><td>Sampués</td><td>Sucre</td></tr>
         <tr><td>818</td><td>San Agustín</td><td>Huila</td></tr>
         <tr><td>819</td><td>San Alberto</td><td>Cesar</td></tr>
-        <tr><td>820</td><td>San Andrés</td><td>Archipiélago De San Andrés, Providencia Y Santa Catalina</td></tr>
+        <tr><td>820</td><td>San Andrés</td><td>San Andrés y Providencia</td></tr>
         <tr><td>821</td><td>San Andrés</td><td>Santander</td></tr>
         <tr><td>822</td><td>San Andrés de Cuerquía</td><td>Antioquia</td></tr>
         <tr><td>823</td><td>San Andrés de Sotavento</td><td>Córdoba</td></tr>
@@ -942,7 +942,7 @@
         <tr><td>892</td><td>San Roque</td><td>Antioquia</td></tr>
         <tr><td>893</td><td>San Sebastián</td><td>Cauca</td></tr>
         <tr><td>894</td><td>San Sebastián de Buenavista</td><td>Magdalena</td></tr>
-        <tr><td>895</td><td>Mariquita</td><td>Tolima</td></tr>
+        <tr><td>895</td><td>San Sebastián De Mariquita</td><td>Tolima</td></tr>
         <tr><td>896</td><td>San Vicente de Chucurí</td><td>Santander</td></tr>
         <tr><td>897</td><td>San Vicente del Caguán</td><td>Caquetá</td></tr>
         <tr><td>898</td><td>San Vicente Ferrer</td><td>Antioquia</td></tr>
@@ -1131,7 +1131,7 @@
         <tr><td>1081</td><td>Vijes</td><td>Valle Del Cauca</td></tr>
         <tr><td>1082</td><td>Villa Caro</td><td>Norte De Santander</td></tr>
         <tr><td>1083</td><td>Villa de Leyva</td><td>Boyacá</td></tr>
-        <tr><td>1084</td><td>Ubaté</td><td>Cundinamarca</td></tr>
+        <tr><td>1084</td><td>Villa De San Diego De Ubaté</td><td>Cundinamarca</td></tr>
         <tr><td>1085</td><td>Villa del Rosario</td><td>Norte De Santander</td></tr>
         <tr><td>1086</td><td>Villa Rica</td><td>Cauca</td></tr>
         <tr><td>1087</td><td>Villagarzón</td><td>Putumayo</td></tr>
