--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -173,9 +173,10 @@
     </p>
 
     <p>
-        Si actualmente facturas electrónicamente con otra aplicación o con el portal de la DIAN, no necesitarás realizar este procedimiento
+        Si actualmente facturas electrónicamente con otra aplicación, no necesitarás realizar este procedimiento
         nuevamente para poder facturar con <b>SimpleOps</b>. El certificado de firma digital que ya tienes te servirá.
-        Asegúrate de tener tu archivo PFX y tu clave y pasa al procedimiento de pruebas.
+        Asegúrate de tener tu archivo PFX y tu clave y pasa al procedimiento de pruebas. Si facturas con el portal gratuito de la DIAN, deberás
+        obtener un nuevo certificado porque el de ellos no te servirá para SimpleOps.
     </p>
 
 
