--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -600,7 +600,7 @@
     <p>
         Ingresa al portal de facturador: en <a href="https://www.dian.gov.co">www.dian.gov.co</a> haz clic en
         <i>Temas de interés > Factura Electrónica > Facturando Electrónicamente</i> e ingresa de la misma manera que al portal de habilitación.
-        Haz clic en <i>Partipantes > Asociar prefijos</i>. En <i>Proveedor - Software</i> selecciona
+        Haz clic en <i>Configuración > Asociar Rangos de Numeración</i>. En <i>Proveedor - Software</i> selecciona
         la opción <i>[NombreDeTuEmpresa] - SimpleOps[NitDeTuEmpresa]</i>, en <i>Prefijo</i> selecciona la opción que contiene el prefijo, número
         de resolución y rango de numeración recién autorizado y haz clic en <i>Agregar</i>. Verifica que la fecha de expiración sea la misma que
         ingresaste en <i>Empresa - Producción.json</i> > <i>FinAutorizaci\u00F3nFacturaci\u00F3n</i>. Si en la tabla hay un rango de numeración 
