--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -437,7 +437,7 @@
         <li>
             <b>\u00DAltimoN\u00FAmeroFacturaAutorizada [Número]:</b>
             Valor final del rango de numeración otorgado por la DIAN.
-            El número que copiaste desde el portal de la DIAN con nombre <i>ÚltimoNúmeroFacturaAutorizada</i>.
+            El número que copiaste desde el portal de la DIAN con nombre <i>ÚltimoNúmeroFacturaAutorizada</i>. Ingrésalo sin comas ni puntos.
         </li>
 
         <li>
@@ -575,10 +575,10 @@
                 <b>PrefijoFacturas [Texto]:</b> Casilla <i>31. Prefijo</i> en la resolución.
             </li>
             <li>
-                <b>PrimerN\u00FAmeroFacturaAutorizada [Número]:</b> Casilla <i>32. Desde el número</i> en la resolución.
+                <b>PrimerN\u00FAmeroFacturaAutorizada [Número]:</b> Casilla <i>32. Desde el número</i> en la resolución. Ingrésalo sin comas ni puntos.
             </li>
             <li>
-                <b>\u00DAltimoN\u00FAmeroFacturaAutorizada [Número]:</b> Casilla <i>33. Hasta el número</i> en la resolución.
+                <b>\u00DAltimoN\u00FAmeroFacturaAutorizada [Número]:</b> Casilla <i>33. Hasta el número</i> en la resolución. Ingrésalo sin comas ni puntos.
             </li>
             <li>
                 <b>InicioAutorizaci\u00F3nFacturaci\u00F3n [Fecha]:</b> Casilla <i>997. Fecha formalización</i> en la resolución. Usa únicamente la fecha,
