--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -736,7 +736,8 @@
             <li>
                 <b>DescuentoCondicionado:</b> No afecta la base gravable para el IVA ni retenciones. Es un descuento que depende que se de cierta 
                 condición para ser aplicado y hasta que no se de esa condición hay incertidumbre de su aplicación, por lo tanto los impuestos y 
-                retenciones son aplicados sin tenerlo en cuenta.
+                retenciones son aplicados sin tenerlo en cuenta. Se puede usar un valor negativo para generar cargos adicionales sobre la factura que no
+                afecten los impuestos ni las retenciones, por ejemplo propinas.
             </li>
             <li>
                 <b>DescuentoComercial:</b> Afecta la base gravable para el IVA y retenciones. Es un descuento del que se tiene certeza que se va 
