--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -482,9 +482,10 @@
         <li>
             <b>EmailContactoFacturaci\u00F3n [Texto]:</b>
             Email de la persona encargada de la facturación. Se usa para escribirlo en la factura electrónica (XML).
-            No es obligatorio, pero los clientes podrían hacer uso de él. Si se usa un valor, este correo debe coincidir con el configurado en la 
-            plataforma de la DIAN. Se configura en la plataforma de la DIAN con 
-            <a href="https://felcowiki.thefactoryhka.com.co/index.php/Configuraci%C3%B3n_-_Portal_DFactura_Validaci%C3%B3n_Previa#Configurar_Correo_Recepci.C3.B3n_DIAN">este procedimiento</a>.
+            No es obligatorio, pero los clientes podrían hacer uso de él. Si se usa un valor, este correo debe coincidir con el configurado en la
+            plataforma de la DIAN. Se configura en la plataforma de la DIAN con
+            <a href="https://felcowiki.thefactoryhka.com.co/index.php/Configuraci%C3%B3n_-_Portal_DFactura_Validaci%C3%B3n_Previa">este procedimiento</a> (buscar la sección Configurar Correo Recepción DIAN). 
+            Alternativamente, puedes dejar este valor vacío ("").
         </li>
 
         <li>
