--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -609,7 +609,8 @@
         la opción <i>[NombreDeTuEmpresa] - SimpleOps[NitDeTuEmpresa]</i>, en <i>Prefijo</i> selecciona la opción que contiene el prefijo, número
         de resolución y rango de numeración recién autorizado y haz clic en <i>Agregar</i>. Verifica que la fecha de expiración sea la misma que
         ingresaste en <i>Empresa - Producción.json</i> > <i>FinAutorizaci\u00F3nFacturaci\u00F3n</i>. Si en la tabla hay un rango de numeración
-        anterior que ya no usarás, elimínalo.
+        anterior que ya no usarás, elimínalo. Si no encuentras el rango de numeración recién autorizado en el selector, puede ser que aún no se haya
+        actualizado en el servidor de la DIAN y debas esperar unas 2 horas para que se haga efectivo.
     </p>
     <img src="Imágenes/Instalación y Habilitación Facturación Electrónica/AsociaciónPrefijosPortalDIAN.png" />
 
@@ -630,7 +631,8 @@
 
     <p>
         Este procedimiento y el <i>8. Solicitud de la Resolución de Facturación Electrónica a la DIAN</i> los deberás repetir cada vez que se te venza
-        la autorización de numeración.
+        la autorización de numeración. Si quieres usar prefijos de facturación diferentes en diferentes equipos, por ejemplo para facturar con diferente
+        numeración en diferentes sedes, deberás realizar estos dos pasos en cada equipo.
     </p>
 
     <p>
