--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -178,9 +178,9 @@
 
     <p>
         Si aún no facturas electrónicamente y no tienes certificado de firma digital puedes seguir
-        <a href="Certificado de Firma Digital Andes.html">esta guía</a> para
-        adquirirlo con Andes SCD.
-        <b>SimpleOps</b> no tiene ninguna relación con Andes SCD ni recibe comisión por realizar esta recomendación.
+        <a href="Certificado de Firma Digital Camerfirma.html">esta guía</a> para
+        adquirirlo con Camerfirma.
+        <b>SimpleOps</b> no tiene ninguna relación con Camerfirma ni recibe comisión por realizar esta recomendación.
     </p>
 
 
