--- a/SimpleOps/Guías/Certificado de Firma Digital Andes.html
+++ b/SimpleOps/Guías/Certificado de Firma Digital Andes.html
@@ -36,13 +36,7 @@
     <h1>Obtención de Certificado de Firma Digital con Andes SCD</h1>
 
     <p>
-        Esta guía es para generar el certificado de firma digital con la entidad certificadora Andes SCD, quiénes vendían certificados
-        a 297 500 $ anuales en el año 2020. A 24 792 $ por mes era un precio razonable y su servicio es bueno. El precio no debería cambiar mucho de
-        año a año, así que si te cotizan un precio considerablemente mayor te recomiendo consultar con las otras entidades certificadoras. 
-        <b>Actualización 2023:</b>
-        GSE Gestión de Seguridad Electrónica te pueden vender un certificado por 208 000 $ + IVA para dos años, lo que da 8666 $ + IVA mensual. Lo considero
-        la mejor opción y procuraré actualizar esta guía para la generación de certificados con ellos. De todas maneras te recomiendo cotizar
-        en varias entidades cuando lo vayas a adquirir pues los precios pueden variar.
+        Esta guía es para generar el certificado de firma digital con la entidad certificadora Andes SCD.
     </p>
 
     <p>
