--- a/SimpleOps/Guías/Certificado de Firma Digital Camerfirma.html
+++ b/SimpleOps/Guías/Certificado de Firma Digital Camerfirma.html
@@ -55,19 +55,19 @@
     
 
     <p>
-        Comunícate con la lína de Whatsapp de Camerfirma que aparece en su <a href="camerfirma.com.co">sitio web</a> y solicita una cotización de un 
-        certificado de facturación electrónica.
+        Comunícate con la lína de Whatsapp de Camerfirma que aparece en su <a href="https://camerfirma.com.co">sitio web</a> y solicita una cotización de un
+        certificado de facturación electrónica. Dale tu información de contacto y aprueba la cotización que te envíen.
     </p>
 
     <p>
-        Después de darle tu información de contacto y aprobar la cotización que te indiquen por Whatsapp, CameFirma te enviará un email donde 
+        Camerfirma te enviará un correo electrónico donde 
         te piden información varia, documentación de tu empresa y el comprobante de pago. Ten en cuenta que los datos del titular de la firma 
         son los datos del representante legal. En la sección "Tipo de Certificado Firma Digital (Persona Juridica):" escribe  factura electrónica 
         para persona jurídica.
     </p>
 
     <p>
-        Pasados 1 o 2 días habiles te enviarán el certificado por email y su clave (que ellos la llaman PIN). Descomprime el archivo y renombra el 
+        Pasados 1 o 2 días habiles te enviarán el certificado por email y su clave (que ellos llaman PIN). Descomprime el archivo y renombra el 
         archivo del certificado [nombre de tu empresa].p12 a Certificado.pfx. Debes cambiar la extensión del archivo por .pfx. Si no puedes ver 
         las extensiones en el explorador de Windows, actívalas en Vista > Extensiones de nombre de archivo.
     </p>
