--- a/SimpleOps/Guías/Certificado de Firma Digital Camerfirma.html
+++ b/SimpleOps/Guías/Certificado de Firma Digital Camerfirma.html
@@ -39,7 +39,7 @@
         Esta guía es para generar el certificado de firma digital con la entidad certificadora Camerfirma, quiénes vendían el certificado
         a 280 000 $ por dos años en el año 2024. A 11 700 $ por mes era un precio razonable y su servicio es bueno. El precio no debería cambiar mucho de
         año a año, así que si te cotizan un precio considerablemente mayor, te recomiendo consultar con las otras empresas certificadoras como
-        gse.com.co (372 945 $ en 2024), andesscd.com.co (589 050 $ en 2024) (<a href="Certificado de Firma Digital Andes.html">Guía Andes</a>) o certicamara.com (1 003 884 $ en 2024).
+        gse.com.co (372 945 $ en 2024), andesscd.com.co (589 050 $ en 2024) (<a href="Certificado de Firma Digital Andes.html">guía</a>) o certicamara.com (1 003 884 $ en 2024).
     </p>
 
     <p>
